--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,10 @@
 * {
-    margin: 0;
-    padding: 0;
     font-family: 'Nunito Sans';
     color: 'black';
+}
+
+body {
+    background-color: #f9f9f9;
 }
 
 a { /* Unvisited link  */
