--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -43,3 +43,8 @@ a:active { /* Selected link  */
         align-items: unset;
     }
 }
+
+.grid {
+    flex-direction: row;
+    align-items: unset;
+}
