--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,6 +14,10 @@ body {
     padding: 0;
 }
 
+hr {
+    all: unset;
+}
+
 a { /* Unvisited link  */
     color:#000000;
 }
@@ -36,21 +40,68 @@ a:active { /* Selected link  */
     background-color: black;
 }
 
-@media all and (max-width: 992) {
-    .grid {
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-@media all and (min-width: 992) {
-    .grid {
-        flex-direction: row;
-        align-items: unset;
-    }
-}
-
 .grid {
     flex-direction: row;
     align-items: unset;
 }
+
+.footer {
+    flex-direction: row;
+    align-items: unset;
+}
+
+.mobile {
+    display: none;
+}
+
+.desktop {
+    display: block;
+}
+
+.main-image {
+    width: 46vw;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
+@media all and (max-width: 767px) {
+    .footer {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    h1 {
+        text-align: left;
+    }
+
+    h2 {
+        text-align: left;
+    }
+}
+
+@media all and (max-width: 992px) {
+    .grid {
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .mobile {
+        display: block;
+    }
+
+    .desktop {
+        display: none;
+    }
+
+    .main-image {
+        width: 100vw;
+    }
+}
+
