--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -89,7 +89,11 @@ h2 {
 }
 
 .niche-image {
-    zoom: 60%;
+    width: 110px;
+}
+
+.about-logo-image {
+    width: 300px;
 }
 
 .layout {
@@ -122,16 +126,28 @@ h2 {
         text-align: left;
     }
 
-    .main-image {
-        zoom: 50%;
-    }
-
     .image {
         zoom: 70%;
     }
 
     .niche-image {
-        zoom: 40%;
+        width: 80px;
+    }
+
+    .by-felfele-image {
+        width: 68px;
+    }
+
+    .niche-logo-image {
+        width: 85px;
+    }
+
+    .about-logo-image {
+        width: 150px;
+    }
+
+    .donate-image {
+        zoom: 50%;
     }
 
     .layout {
