Fixed ios inner shadow input issue

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -40,6 +40,10 @@ a:active { /* Selected link  */
     background-color: black;
 }
 
+input {
+    -webkit-appearance: none;
+}
+
 input:focus {
     outline: none;
 }
